# p3-matrix-layout-tests

./: Cargo.toml  Makefile  profile.json  shader.air  shader.metal  shader.metallib
benches/: main.rs  tmat.rs
examples/: float.rs  metal.rs
src/: lib.rs  row_major.rs  tiled_mat.rs  tiles.rs  tinym31.rs
