[package]
name = "p3-matrix-layout-tests"
version = "0.1.0"
edition = "2021"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
itertools = "0.13.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"

[dev-dependencies]
divan = "0.1.14"

[[bench]]
name = "main"
harness = false
